<resources>
    <string name="app_name">Cowboys</string>
    <string name="empty" />
    <string name="sign_in">Войти</string>
    <string name="sign_out">Выйти</string>
    <string name="my_orders">Мои заказы</string>
    <string name="settings">Настройки</string>
    <string name="text_field_error">Поле заполнено неверно</string>
    <string name="unexpected_error_title">Произошла непредвиденная ошибка.</string>
    <string name="unexpected_error_description">Пожалуйста, попробуйте позже.</string>

    <string name="sign_in_title">@string/sign_in</string>
    <string name="sign_in_login_hint">Логин</string>
    <string name="sign_in_password_hint">Пароль</string>
    <string name="sign_in_action">@string/sign_in</string>
    <string name="sign_in_login_error">@string/text_field_error</string>
    <string name="sign_in_password_error">@string/text_field_error</string>
    <string name="sign_in_wrong_credentials">Неверный логин или пароль.</string>
    <string name="sign_in_unexpected_error">Произошла непредвиденная ошибка.\nПожалуйста, попробуйте позже.</string>
    <string name="progress_container_refresh_action">Обновить</string>
    <string name="progress_container_unexpected_error_title">Произошла непредвиденная ошибка</string>
    <string name="progress_container_unexpected_error_description">Детальный текст ошибки, занимающий несколько строк</string>
    <string name="progress_container_empty_list_title">Товары не были обнаружены</string>
    <string name="progress_container_empty_list_description">Попробуйте обновить, вдруг товары появились</string>
    <string name="product_item_image_description">Товар</string>
    <string name="product_item_buy_action">Купить</string>
    <string name="catalog_title">Каталог</string>
    <string name="top_bar_menu_profile_title">Профиль</string>
    <string name="profile_image_desc">Аватар профиля</string>
    <string name="profile_orders_action">@string/my_orders</string>
    <string name="profile_sign_out_action">@string/sign_out</string>
    <string name="profile_settings_action">@string/settings</string>
    <string name="profile_user_name">%1$s %2$s</string>
    <string name="profile_app_version">Приложение %1$s</string>
    <string name="product_size_hint">Размер</string>
    <string name="product_buy_action">Купить сейчас</string>

    <string name="orders_title">@string/my_orders</string>
    <string name="tab_all_orders">Все %s</string>
    <string name="tab_active_orders">Активные %s</string>
    <string name="order_status_in_work">В работе</string>
    <string name="order_status_cancelled">Отменен</string>
    <string name="order_status_done">Доставлен</string>
    <string name="order_cancelled">Был отменен %s в %s</string>
    <string name="order_delivery_address">Адрес доставки: %s</string>
    <string name="order_delivery_date">Дата доставки: %s в %s</string>
    <string name="order_number_date">Заказ №%s от %s %s</string>
    <string name="order_name">%s × %s • %s</string>
    <string name="order_cancel_error">Произошла ошибка во время отмены заказа</string>
    <string name="order_cancel_success">Заказ №%s от %s %s был успешно отменен</string>
    <string name="orders_empty_list_title">Заказов не обнаружено</string>
    <string name="orders_empty_list_description">Закажите что-нибудь и заказы появятся тут</string>
    <string name="orders_empty_list_catalog_action">В каталог</string>
    <string name="order_menu_cancel">Отменить</string>
    <string name="order_title">Оформление заказа</string>
    <string name="house_hint">Дом</string>
    <string name="apartment_hint">Квартира</string>
    <string name="delivery_date_hint">Дата доставки</string>
    <string name="order_buy_action">Купить за %s</string>
    <string name="order_product_title">%s • %s</string>


</resources>