<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/button_orders"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginVertical="@dimen/normal_150"
        android:layout_marginStart="@dimen/normal_100"
        android:layout_marginEnd="@dimen/normal_100"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@id/button_settings"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/text_orders"
            style="@style/TextAppearance.Body.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/profile_orders_action"
            app:drawableTopCompat="@drawable/ic_delivery" />

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/button_settings"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginVertical="@dimen/normal_150"
        android:layout_marginEnd="@dimen/normal_100"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@id/button_sign_out"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@id/button_orders"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/text_settings"
            style="@style/TextAppearance.Body.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/profile_settings_action"
            app:drawableTopCompat="@drawable/ic_settings" />
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/button_sign_out"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginVertical="@dimen/normal_150"
        android:layout_marginEnd="@dimen/normal_100"
        app:cardBackgroundColor="@color/light_red"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@id/button_settings"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/text_sign_out"
            style="@style/TextAppearance.Body.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/profile_sign_out_action"
            android:textColor="@color/white"
            app:drawableTopCompat="@drawable/ic_logout" />
    </com.google.android.material.card.MaterialCardView>
</androidx.constraintlayout.widget.ConstraintLayout>